# firepulse-planning-engine

./: .dockerignore  .env.ci  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.override.yaml  docker-compose.yaml  emissions.csv  planning_affectations.txt  planning_detaille.txt  pyproject.toml
.github/workflows/: ci.yaml
Data/: Client.py  config.py  test_client.py  test_firefighter.py  testvehicule.py
Solveur/: Solveur.py
entity/: caserne.py  casernefactory.py  planning_affectations.py  pompier.py  vehicule.py
output/: output.txt  planning.txt
src/: app.py  router.py  solver.py  worker.py
src/entities/: availability_slot.py  availability_slot_firefighter.py  caserne.py  fire_station.py  firefighter.py  firefighter_training.py  planning.py  pompier.py  shift_assignment.py  vehicle.py  vehicle_availabilities.py  vehicule.py
src/tests/: test_client.py  test_firefighter.py  test_vehicule.py
src/utils/: config.py  remote_client.py
